classDiagram

class Owner {
    +int owner_id
    +string name
    +list pets
    +add_pet()
    +remove_pet()
    +get_pets()
}

class Pet {
    +int pet_id
    +string name
    +string species
    +int age
    +list tasks
    +add_task()
    +remove_task()
    +get_tasks()
}

class Task {
    +int task_id
    +string title
    +string task_type
    +datetime due_time
    +int priority
    +bool completed
    +bool recurring
    +mark_complete()
    +update_priority()
}

class Scheduler {
    +list tasks
    +add_task()
    +remove_task()
    +sort_tasks()
    +detect_conflicts()
    +get_today_tasks()
}

Owner "1" --> "*" Pet : owns
Pet "1" --> "*" Task : has
Scheduler --> Task : manages